--- a/barti-check/pom.xml
+++ b/barti-check/pom.xml
@@ -37,6 +37,7 @@
                         <version>2.5.6</version>
                         <configuration>
                             <defaultMethods>true</defaultMethods>
+                            <fork>true</fork>
                         </configuration>
                         <executions>
                             <execution>
