--- a/barti-db/pom.xml
+++ b/barti-db/pom.xml
@@ -17,8 +17,8 @@
         <!-- https://jdbc.postgresql.org/documentation/80/connect.html
              jdbc:postgresql://host:port/database -->
         <jdbcUrl>jdbc:postgresql://${db.host}:${db.port}/${db.dbname}</jdbcUrl>
-        <postgresql.jdbc.version>9.4-1201-jdbc41</postgresql.jdbc.version>
-        <jooq.version>3.8.0</jooq.version>
+        <postgresql.jdbc.version>42.2.5</postgresql.jdbc.version>
+        <jooq.version>3.11.11</jooq.version>
     </properties>
 
     <build>
@@ -116,7 +116,7 @@
 
                     <generator>
                         <database>
-                            <name>org.jooq.util.postgres.PostgresDatabase</name>
+                            <name>org.jooq.meta.postgres.PostgresDatabase</name>
                             <inputSchema>${db.schema}</inputSchema>
                             <unsignedTypes>false</unsignedTypes>
                         </database>
@@ -145,6 +145,13 @@
             <artifactId>jooq</artifactId>
             <version>${jooq.version}</version>
         </dependency>
+        <!-- might be removed as soon as https://github.com/jOOQ/jOOQ/issues/6612 is closed -->
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
